Fix T61593: Python can't access HUD region-type